#ifndef TELEPORTATIONPOTIONOBJECT_H
#define TELEPORTATIONPOTIONOBJECT_H

#include "ConsumableObject.h"

class TeleportationPotionObject : public ConsumableObject {
public:
    TeleportationPotionObject(const char* name, const char* description);
};

#endif // TELEPORTATIONPOTIONOBJECT_H
