@startuml

package "Backend" {
    class Location {
        + Location()

        - name : char[]
        - description : char[]
    }

    class LocationFactory {
        + LocationFactory()
        + createLocation() : Location*
    }

    class Enemy {
        + Enemy()

        - name : char[]
        - description : char[]
        - health : int
        - damage : int
        - experience : int
    }

    class EnemyFactory {
        + EnemyFactory()
        + createEnemy() : Enemy*
    }

    class GameObject {
        + GameObject()

        - name : char[]
        - description : char[]
    }

    class GameObjectFactory {
        + GameObjectFactory()
        + createGameObject() : GameObject*
    }

    class GoldPiecesObject {
        + GoldPiecesObject()

        - value : int
    }

    class WeaponObject {
        + WeaponObject()

        - minDamage : int
        - maxDamage : int
    }

    class ArmorObject {
        + ArmorObject()

        - defense : int
    }

    class ConsumableObject {
        + ConsumableObject()

    }

    class HealthPotionObject {
        + HealthPotionObject()

        - healAmount : int
    }

    class ExperiencePotionObject {
        + ExperiencePotionObject()

        - experienceAmount : int
    }

    class TeleportationPotionObject {
        + TeleportationPotionObject()
    }

    class Game {
        + Game()

        - player : Player
        - locations : Location[]
        - enemies : Enemy[]
        - gameObjects : GameObject[]
        - currentLocation : Location
        - currentEnemy : Enemy
        - currentGameObject : GameObject
        - tui : TUI
    }

TeleportationPotionObject --|> ConsumableObject
ExperiencePotionObject --|> ConsumableObject
HealthPotionObject --|> ConsumableObject

ArmorObject --|> GameObject
WeaponObject --|> GameObject
GoldPiecesObject --|> GameObject
ConsumableObject --|> GameObject

GameObjectFactory --> GameObject
LocationFactory --> Location

Location --> "0.." GameObject
Location --> "0.." Enemy

EnemyFactory --> Enemy



}


package "Frontend" {
    class TUI{
        + TUI()
        + displayLocation() : void
        + displayEnemy() : void
        + displayGameObject() : void
        + displayPlayer() : void
        + displayInventory() : void
        + displayHelp() : void
        + displayGameOver() : void
        + displayGameWon() : void
    }

    class Player{
        + Player()

        - name : char[]
        - health : int
        - experience : int
        - level : int
        - location : Location*
        - inventory : GameObject[]
    }


TUI --> Player
TUI --> "1" Game


}



@enduml
